SERVER-76777 Retry coll lock acquisition on self abort